--- a/src-frontend/app/app.component.html
+++ b/src-frontend/app/app.component.html
@@ -1,10 +1,3 @@
 <app-header></app-header>
-
-<div class="container" >
-  <div class="row">
-    <div class="col">
-      <br><br>
-      <router-outlet></router-outlet>
-    </div>
-  </div>
-</div>
+<app-home></app-home>
+<app-footer></app-footer>
