--- a/src-frontend/app/home/home.component.html
+++ b/src-frontend/app/home/home.component.html
@@ -1,49 +1,64 @@
-<div class="card bg-dark text-white">
-    <img class="card-img" src="..\assets\Agadir.jpg" alt="Card image">
-    <div class="card-img-overlay">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text">Last updated 3 mins ago</p>
+<section class="container-fluid entry"> 
+    <!-- hklfajsdlf -->
+    <!-- <div class="row" style:"height: 20vh"></div> -->
+    <div class="entryContent">
+        <div class="entryHeader">Reservation des equipements</div>
+        <div class="entrySubHeader">plus simple, plus efficace.</div>
     </div>
-  </div>
-<div class="card text-center">
-    <div class="card-header">
-      Featured
-    </div>
-    <div class="card-body">
-      <h5 class="card-title">Special title treatment</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-    <div class="card-footer text-muted">
-      2 days ago
-    </div>
-  </div>
-  <br>
-  <div class="row">
-    <div class="col-sm-6">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+</section>
+<section class="section-one">
+    <div class="container section-container">
+        <div class="row align-items-center justify-content-center">
+            <div class="col">
+                <h3>title</h3>
+                <hr>
+            </div>
         </div>
-      </div>
+        <div class="row align-items-center ">
+            <div class="col-5 ">
+                    <img class="img-fluid" style="max-height: 400px;"src="..\assets\images\logoAgadir.jpg" alt="">
+            </div>
+            <div class="col-4 h-100">
+                <div class="featured-text-right text-center text-lg-left  h-100">
+                    <h4>Info</h4>
+                    <p class="text-black-50">
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+                        Aenean commodo ligula eget dolor. Aenean massa.
+                        Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
+                        Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
+                    </p>
+                </div>
+            </div>
+            <div class="col-2 flex-fill"></div>
+        </div>    
     </div>
-    <div class="col-sm-6">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+</section>
+<section class="section-two ">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col">
+                <h3>title</h3>
+                <hr>
+            </div>
         </div>
-      </div>
+        <div class="row align-items-center ">
+            <div class="col-2 flex-fill"></div>
+            <div class="col-4 h-100">
+                <div class="featured-text-left text-center text-lg-left  h-100">
+                    <h4>Info</h4>
+                    <p class="text-black-50">
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+                        Aenean commodo ligula eget dolor. Aenean massa.
+                        Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
+                        Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+                </div>
+            </div>
+            <div class="col-6 ">
+                <img class="img-fluid" style="max-height: 400px;"src="..\assets\images\logoAgadir.jpg" alt="">
+            </div>
+
+        </div>    
     </div>
-  </div>
+</section>
 
-
-
-
-
-
-
+<section></section>
