--- a/src-frontend/app/header/header.component.html
+++ b/src-frontend/app/header/header.component.html
@@ -7,18 +7,18 @@
     </div>
     <div class="col-xs-4 mb-0">
         <nav class="navbar navbar-left navstyle mb-0">
-            <a href="#" class="nav-link">Home</a>
-            <a href="#" class="nav-link">Actualite</a>
-            <a href="#" class="nav-link">Listes des equipements</a>
-            <a href="#" class="nav-link">Contacts</a>
+            <a href="#" class="nav-link" (click)="onTogglePage('home')">Home</a>
+            <a href="#" class="nav-link" (click)="onTogglePage('actualite')">Actualite</a>
+            <a href="#" class="nav-link" (click)="onTogglePage('equipements')">Listes des equipements</a>
+            <a href="#" class="nav-link" (click)="onTogglePage('contacts')">Contacts</a>
         </nav>
     </div>
     
     
     <div class="col-xs">
         <div class="navbar navbar-right navstyle">
-            <a href="#" class="nav-link">Sign up</a>
-            <a href="#" class="nav-link">Log in</a>
+            <a href="#" class="nav-link extraStyle">Sign up</a>
+            <a href="#" class="nav-link extraStyle">Log in</a>
 
         </div>
     </div>
