--- a/src-frontend/app/header/header.component.scss
+++ b/src-frontend/app/header/header.component.scss
@@ -12,3 +12,20 @@
 .navbar-expand-lg .navbar-nav > li > a  {
     color: #ffffff;
 }*/ 
+
+.navstyle {
+    background-color: #03588C;
+}
+.nav-link:visited,
+.nav-lin:link{
+    color:#8FBDD9;
+}
+.nav-link:hover,
+.nav-lin:active{
+    color:white;
+    border-bottom: white solid 2px;
+    font-style: bold;
+}
+#main-nav{
+    background-color: white;
+}
