--- a/src-frontend/app/signup-user/signup-user.component.html
+++ b/src-frontend/app/signup-user/signup-user.component.html
@@ -1,1 +1,59 @@
-<p>signup-user works!</p>
+<br><br><br><br>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6">
+          <form [formGroup]="signUpform" (ngSubmit)="onSubmit()">
+            <div class="form-group">
+              <label for="username">
+                <b>Username :</b>
+              </label>
+              <input type="text" id="username" class="form-control" formControlName="username" required>
+           
+              <label for="password">
+                <p>Password :</p>
+             </label>
+                <input type="password" id="password" class="form-control" formControlName="password" required>
+                <label for="nom">
+                  <b>nom :</b>
+                </label>
+                <input type="text" id="nom" class="form-control" formControlName="nom" required>
+             
+                <label for="prenom">
+                  <b>prenom :</b>
+                </label>
+                <input type="text" id="prenom" class="form-control" formControlName="prenom" >
+             
+                <label for="telephone">
+                  <b>telephone :</b>
+                </label>
+                <input type="text" id="telephone" class="form-control" formControlName="telephone" required>
+      
+                <label for="email">
+                  <b>Email :</b>
+                </label>
+                <input type="text" id="email" class="form-control" formControlName="email" required>
+              
+                <label for="type">
+                  <b>type :</b>
+                </label>
+                <select id="type" class="form-control" formControlName="type" required>
+                    <optgroup label="Swedish Cars">
+                      <option value="Association">Association</option>
+                      <option value="Personne physique">Personne physique</option>
+                      <option value="Organisation">organisation</option>
+                      <option value="Parti politique">Parti politique</option>
+                      <option value="Ecole">Ecole</option>
+                    </optgroup>
+                </select>
+             
+                <label for="adresse">
+                  <b>adresse :</b>
+                </label>
+                <input type="text" id="adresse" class="form-control" formControlName="adresse" required>
+              </div>
+              <button class="btn btn-primary" type="submit" >S'inscrire </button>
+          </form>
+
+        </div>
+    </div>
+</div>
