deposer la demande proto & authGuard

--- a/src-frontend/app/signup-user/signup-user.component.html
+++ b/src-frontend/app/signup-user/signup-user.component.html
@@ -13,7 +13,13 @@
                 <p>Password :</p>
              </label>
                 <input type="password" id="password" class="form-control" formControlName="password" required>
-                <label for="nom">
+             <!--   
+                <label for="repassword">
+                  <p>Confirm Password :</p>
+               </label>
+                  <input type="password" id="repassword" class="form-control" formControlName="repassword" required>  
+               -->
+                  <label for="nom">
                   <b>nom :</b>
                 </label>
                 <input type="text" id="nom" class="form-control" formControlName="nom" required>
