--- a/src-frontend/app/demande/demande.component.html
+++ b/src-frontend/app/demande/demande.component.html
@@ -19,8 +19,16 @@
                 </div>
             </div>
             <div class="col-md-8 py-5 border">
-                <h4 class="pb-4">Remplir Svp les champs de votre demande</h4>
+                <h4 class="pb-4">Remplir Svp les champs de votre demande </h4>
                 <form [formGroup]="demandeForm" (ngSubmit)="onSubmit()">
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                          <input id="demandeurId" name="demandeurId" readonly="readonly" class="form-control" type="text" formControlName="demandeurId" value="[user.id]" required>
+                        </div>
+                        <div class="form-group col-md-6">
+                          <input type="text" class="form-control" id="username" readonly="readonly" formControlName="username" value="[user.username]" required>
+                        </div>
+                      </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
                           <input id="objet" name="objet" placeholder="objet de la demande" class="form-control" type="text" formControlName="objet" required>
