--- a/src-frontend/app/header/header.component.html
+++ b/src-frontend/app/header/header.component.html
@@ -9,15 +9,16 @@
           <a routerLink="/home" class="nav-link">Home</a>
           <a routerLink="/actualite" class="nav-link">Actualite</a>
           <a routerLink="/equipements" class="nav-link">Listes des equipements</a>
-          <a routerLink="/" class="nav-link">Contacts</a>
+          <a routerLink="/demande" class="nav-link">Contacts</a>
       </nav>
   </div>
   
   
   <div class="col-xs">
       <div class="navbar navbar-right navstyle">
-          <a routerLink="auth/signup" class="nav-link">Sign up</a>
-          <a routerLink="auth/signin" class="nav-link">Log in</a>
+          <a routerLink="auth/signup" class="nav-link" *ngIf="!auhtservice.isloggedIn()">Sign up</a>
+          <a routerLink="auth/signin" class="nav-link" *ngIf="!auhtservice.isloggedIn()">Log in</a>
+          <a routerLink="" (click)="onLogout()" class="nav-link" *ngIf="auhtservice.isloggedIn()">Log Out</a>
 
       </div>
   </div>
