--- a/src-frontend/app/home/home.component.html
+++ b/src-frontend/app/home/home.component.html
@@ -47,7 +47,7 @@
                 <div class="featured-text-left text-center text-lg-left  h-100">
                     <h4>Info</h4>
                     <p class="text-black-50">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+                        Lorem ipsum dolor sit amet, ok consectetuer adipiscing elit. 
                         Aenean commodo ligula eget dolor. Aenean massa.
                         Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
                         Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
