commit Demande Update

--- a/src-frontend/app/home/home.component.html
+++ b/src-frontend/app/home/home.component.html
@@ -1,3 +1,6 @@
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<!-- temporary Bootstrap -->
+
 <section class="container-fluid entry"> 
   <!-- hklfajsdlf -->
   <!-- <div class="row" style:"height: 20vh"></div> -->
