--- a/src-frontend/app/list-equipements/list-equipements.component.html
+++ b/src-frontend/app/list-equipements/list-equipements.component.html
@@ -23,3 +23,6 @@
         </div>
     </div>
 </section>
+
+        <app-demande-formulaire></app-demande-formulaire>
+        <app-demande></app-demande>
