--- a/src-frontend/app/footer/footer.component.html
+++ b/src-frontend/app/footer/footer.component.html
@@ -1,3 +1,6 @@
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<!-- temporary Bootstrap -->
+
 <footer class="py-3">
     <div class="container">
         <div class="small text-center">Copyright © 2020</div>
