--- a/src-frontend/app/header/header.component.html
+++ b/src-frontend/app/header/header.component.html
@@ -1,3 +1,5 @@
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<!-- temporary Bootstrap -->
 <nav class="navbar pb-0 pt-0 navbar-dark fixed-top bg-white" id="mainNav">
   <div class="col-xs-4 mb-0">
       <a href="#" class="navbar-brand">
