--- a/src-frontend/app/demande/demande.component.html
+++ b/src-frontend/app/demande/demande.component.html
@@ -1,11 +1,7 @@
-
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 
 <section class="testimonial py-5" id="testimonial">
-    <div class="container">
+    <div class="container" >
         <div class="row ">
             <div class="col-md-4 py-5 bg-primary text-white text-center ">
                 <div class=" ">
@@ -19,16 +15,9 @@
                 </div>
             </div>
             <div class="col-md-8 py-5 border">
-                <h4 class="pb-4">Remplir Svp les champs de votre demande </h4>
+                <h4 class="pb-4">Monsieur remplir Svp les champs de votre demande  </h4>
                 <form [formGroup]="demandeForm" (ngSubmit)="onSubmit()">
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                          <input id="demandeurId" name="demandeurId" readonly="readonly" class="form-control" type="text" formControlName="demandeurId" value="[user.id]" required>
-                        </div>
-                        <div class="form-group col-md-6">
-                          <input type="text" class="form-control" id="username" readonly="readonly" formControlName="username" value="[user.username]" required>
-                        </div>
-                      </div>
+                    <input name="demandeur" formControlName="demandeur" type="hidden" id="demandeur">
                     <div class="form-row">
                         <div class="form-group col-md-6">
                           <input id="objet" name="objet" placeholder="objet de la demande" class="form-control" type="text" formControlName="objet" required>
@@ -39,7 +28,7 @@
                       </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="nombreInvite" placeholder="le nombre estimé des invités" formControlName="nombreInvite" >
+                            <input type="text" class="form-control" id="nombreInvite" placeholder="le nombre estimé des invités" formControlName="nombrePresent" >
                         </div>
 
                         <div class="form-group col-md-6">
@@ -59,7 +48,7 @@
                             </div>
                         
                         <div class="form-group col-md-12">
-                                  <textarea id="comment" name="comment" cols="40" rows="10" class="form-control" formControlName="comment" required></textarea>
+                                  <textarea id="description" name="description" cols="40" rows="10" class="form-control" formControlName="description" required></textarea>
                         </div>
                     </div>
                    <!-- <div class="form-row">
