Gestionnaire: valider/rejeter reservation& créer autorisation

--- a/src-frontend/app/demande/demande.component.html
+++ b/src-frontend/app/demande/demande.component.html
@@ -8,7 +8,7 @@
     <ng-template let-demandeL pTemplate = "listItem">
         
         <div>
-            <app-demande-unit [demandeUnit] = demandeL ></app-demande-unit>
+            <app-demande-summary [demandeSum]= demandeL ></app-demande-summary>
         </div>
     </ng-template>
 
