--- a/src-frontend/app/footer/footer.component.scss
+++ b/src-frontend/app/footer/footer.component.scss
@@ -1,4 +1,8 @@
 footer{
     background-color: #8FBDD9;
     color:#03588C;
+    position: relative;
+    height: 100px;
+    margin-top: 500px;
+    clear: both;
 }
