Gestionnaire: valider/rejeter reservation& créer autorisation2

--- a/src-frontend/app/gestionnaires/reservations/reservation-unit/reservation-unit.component.html
+++ b/src-frontend/app/gestionnaires/reservations/reservation-unit/reservation-unit.component.html
@@ -50,6 +50,6 @@
    <br><br>
 <div style="text-align: center;">
     <button type="submit" class="btn btn-success"  data-toggle="tooltip" data-placement="top" title="valider la réservation">Valider</button>&nbsp;
-    <button type="submit" class="btn btn-danger" (click)="rejeter()"  data-toggle="tooltip" data-placement="top" title="rejeter la réservation">rejeter</button>
+    <button type="button" class="btn btn-danger" (click)="rejeter()"  data-toggle="tooltip" data-placement="top" title="rejeter la réservation">rejeter</button>
 </div>
 </form>
