--- a/src-frontend/app/signup-user/signup-user.component.html
+++ b/src-frontend/app/signup-user/signup-user.component.html
@@ -10,7 +10,7 @@
               <input type="text" id="username" class="form-control" formControlName="username" required>
            
               <label for="password">
-                <p>Password :</p>
+                <b>Password :</b>
              </label>
                 <input type="password" id="password" class="form-control" formControlName="password" required>
              <!--   
