--- a/src-frontend/app/list-equipements/equipement-sum/equipement-sum.component.html
+++ b/src-frontend/app/list-equipements/equipement-sum/equipement-sum.component.html
@@ -1,3 +1,3 @@
 <a 
-    class="list-group-item list-group-item-action"
+    class="list-group-item list-group-item-action equipement-sum-div"
     (click) = "onSelectEquipement()">{{name}}</a>
