--- a/src-frontend/app/list-equipements/equipement-update/equipement-update.component.html
+++ b/src-frontend/app/list-equipements/equipement-update/equipement-update.component.html
@@ -47,6 +47,13 @@
                 <span class="label">secteur:</span> 
                 <input type="text" class="form-control" name="secteur" id="secteur"  formControlName="secteur">
             </li>
+            <li class="list-group-item">
+                <span class="label">Etat :</span> 
+                <select type="text" class="form-control" name="etat" id="etat"  formControlName="etat">
+                    <option value="maintenu" selected>maintenu</option>
+                    <option value="suspendu">suspendu</option>
+                </select>
+            </li>
         </ul>    
         <div  style="margin: 6px; float: right;">
             <button type="submit" class="btn btn-success">Save</button>
