--- a/src-frontend/app/demandeur/demande/demande-formulaire/demande-formulaire.component.html
+++ b/src-frontend/app/demandeur/demande/demande-formulaire/demande-formulaire.component.html
@@ -57,9 +57,8 @@
                             <b> choisir l'équipement désiré :</b>
                         </div>
                         <div class="form-group col-md-6">
-                                  <select id="equipement" class="form-control" placeholder="select l'equipement" formControlName="equipement" required>
-                                    <option selected></option>
-                                    <option value="1"> Khai eddin</option>
+                                  <select id="equipement" class="form-control" formControlName="equipement" required>
+                                    <option value="1" selected> Khair eddin</option>
                                     <option value="2"> tasila</option>
                                     <option value="3"> tikiwin</option>
                                     <option value="4"> anza</option>
